# DatabaseManagerment

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start-all.bat  stop-all.bat  temp.html  架构设计.md  架构设计_修改版.md
.github/workflows/: email-notify.yml
ai-service/: README.md
ai-service/src/: handlers.rs  main.rs  service.rs  state.rs
common/: Cargo.toml
common/src/: config.rs  errors.rs  lib.rs  response.rs
common/src/middleware/: auth.rs  mod.rs  request_id.rs
common/src/models/: connection.rs  database.rs  mod.rs  monitor.rs  query.rs
common/src/utils/: id_generator.rs  mod.rs  sql_validator.rs
connection-service/: Cargo.toml
connection-service/src/: handlers.rs  main.rs  pool_manager.rs  routes.rs  service.rs  state.rs
gateway/: Cargo.toml
gateway/src/: handlers.rs  main.rs  proxy.rs  routes.rs  state.rs
query-service/: Cargo.toml
query-service/src/: handlers.rs  main.rs  routes.rs  service.rs  state.rs
src/: main.rs
src/routes/: mod.rs
