[package]
name = "connection-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "数据库连接管理微服务"

[[bin]]
name = "connection-service"
path = "src/main.rs"

[dependencies]
# 内部模块
common = { workspace = true }

# Web 框架
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }

# 日志与追踪
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 数据库
sqlx = { workspace = true }
redis = { workspace = true }

# 参数校验
validator = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 工具库
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

# API 文档
utoipa = { workspace = true }
